<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="General"
        app:iconSpaceReserved="false">

        <com.example.androidtrlts.Preferences.MyCheckBoxPreference
            android:key="pref_confirm_on_exit"
            android:title="@string/confirm_on_exit"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <com.example.androidtrlts.Preferences.MySwitchPreference
            android:key="pref_main_theme"
            android:title="@string/main_theme"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <!--com.example.androidtrlts.Preferences.MySwitchPreference
            android:key="pref_bin"
            android:title="@string/bin_cap"
            android:defaultValue="false"
            app:iconSpaceReserved="false" /-->

        <com.example.androidtrlts.Preferences.MySwitchPreference
            android:key="pref_text_recog_mode"
            android:title="@string/text_recog_mode"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <com.example.androidtrlts.Preferences.MyCheckBoxPreference
            android:key="pref_sync"
            android:title="Auto-sync"
            android:summary="Syncs files from cloud to local device on startup"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <com.example.androidtrlts.Preferences.MyPreference
            android:key="pref_account"
            android:title="Account"
            app:iconSpaceReserved="false" />

        <!--com.example.ocr_dev.MyPreference android:key="privacy_policy"
            android:title="@string/privacy_policy"
            app:iconSpaceReserved="false" /-->

    </PreferenceCategory>

</PreferenceScreen>